connect graph with another graph

--- a/src/app/network/network-graph.component.html
+++ b/src/app/network/network-graph.component.html
@@ -1,6 +1,6 @@
 
   <div class="jumbotron">
-    <h1>Network Graph </h1> 
+    <h1>Network Graph <button class="btn btn-default" (click)="backToForm()">BACK</button></h1> 
   </div>
 
 <div class="container">
