--- a/src/app/network/network-graph.component.html
+++ b/src/app/network/network-graph.component.html
@@ -5,5 +5,23 @@
 
 <div class="container">
     <div id="mynetwork"></div>
-    
+    <div class="selected-options" *ngIf = "graphSelection">
+        <div class="row" *ngFor="let selectedData of selectedFilter;let i = index" [attr.data-index]="i" >
+           <div class="col-sm-10 col-md-10">
+              <span class="selected-filter-data ellipses">{{selectedData.baseData.toUpperCase()}}  :</span>
+              <span class="selected-filter-data ellipses" style="padding-left: 0;">{{selectedData.baseValue}}</span>
+           </div>
+           <div class="col-sm-2 col-md-2">
+            <button type="button" class="close" (click)="removeSelectedItem(i)">
+              <span>&times;</span>
+            </button>
+           </div>
+        </div>
+        <button type="submit" class="btn btn-success" *ngIf = "selectedFilter.length>0" (click)="onSubmitFilter()">Submit</button>
+        <div *ngIf = "noResultFound" class="alert alert-danger">
+          <strong>Note : </strong> No result found please try again later.
+        </div>
+    </div>
 </div>
+<div>
+<div *ngIf= "showLoader" class="loader"></div>
